cg multireg: added -limireg option, compress temp files

--- a/lib/cg_multireg.wiki
+++ b/lib/cg_multireg.wiki
@@ -15,17 +15,18 @@ followed by columns containing 1 if the region
 is present in samplename and 0 if not.
 
 == Arguments ==
-; **compar_file**: file containing regions, and columns indicating the presence of the region
-; **file**: region files to be added the compar_file.
+; compar_file: file containing regions, and columns indicating the presence of the region
+; file: region files to be added the compar_file.
   The name of the column is name of the file added without extension
 
 == Options ==
-; **-m maxopenfiles** (-maxopenfiles): The number of files that a program
+; -m maxopenfiles (-maxopenfiles): The number of files that a program
 can keep open at the same time is limited. pmulticompar will distribute
 the subtasks thus, that the number of files open at the same time stays
 below this number. With this option, the maximum number of open files can
 be set manually (if the program e.g. does not deduce the proper limit, or
 you want to affect the distribution).
+; -limitreg regionfile: limit multireg to regions in **regionfile**
 
 This command can be distributed on a cluster or using multiple threads with
 [[joboptions|job options]] (more info with cg help joboptions)
