--- a/lib/cg_regselect.wiki
+++ b/lib/cg_regselect.wiki
@@ -13,10 +13,14 @@ regselect selects all regions or variants in region_file1 that overlap with regi
 region_file2. The resulting regions files is written to stdout.
 
 == Arguments ==
-; **region_file1**: regions file
-; **region_file2**: selection regions file
-; **near**: if present, must be a number. Selection regions will be extended (to both sides)
+; region_file1: regions file
+; region_file2: selection regions file
+; near: if present, must be a number. Selection regions will be extended (to both sides)
 with the given amount of bases.
+
+== Options ==
+; -o outputfile: write to outputfile instead of stdout
+; -near number: same a near argument, but as option
 
 == Category ==
 Regions
