--- a/lib/cg_process_sample.wiki
+++ b/lib/cg_process_sample.wiki
@@ -70,6 +70,10 @@ want some made, give these as a space separated list. Possible reports are:
 flagstat_reads flagstat_alignments fastqc histodepth vars hsmetrics covered
 ; -samBQ number: only for samtools; minimum base quality for a base to be considered (samtools --min-BQ option)
 ; -distrreg 0/1: distribute analysis over regions (per chromosome)
+; -datatype datatype: Some variant callers (strelka) need to know the type
+of data (genome, exome or amplicons) for analysis. You can specify it
+using this option. If not given, it is deduced from acompanying region
+files (reg_*_amplicons.tsv for ampicons or reg_*_amplicons.tsv for exome)
 
 This command can be distributed on a cluster or using multiple cores with
 [[joboptions|job options]] (more info with cg help joboptions)
