--- a/lib/cg_var.wiki
+++ b/lib/cg_var.wiki
@@ -38,6 +38,10 @@ a coverage of at least **mincoverage** (default 3)
 ; -distrreg: distribute regions for parallel processing (default chr).
 Possible options are 0 (no distribution), chr (or 1) (distribution per
 chromosome), file name (the regions in the file will be used for subjobs)
+; -datatype datatype: Some variant callers (strelka) need to know the type
+of data (genome, exome or amplicons) for analysis. You can specify it
+using this option. If not given, it is deduced from acompanying region
+files (reg_*_amplicons.tsv for ampicons or reg_*_amplicons.tsv for exome)
 ; -split 1/0: indicate if in the datafiles, multiple alternative genotypes are split over different lines (default 1)
 ; -t number (-threads): number of threads used by each job (if the method supports threads)
 ; -cleanup 0/1: Use 0 to no cleanup some of the temporary files (vcf, delvar, ...)
