--- a/lib/cg_process_sample.wiki
+++ b/lib/cg_process_sample.wiki
@@ -69,7 +69,10 @@ analysis (see further) using the amplicons defained in **ampliconfile**
 want some made, give these as a space separated list. Possible reports are:
 flagstat_reads flagstat_alignments fastqc histodepth vars hsmetrics covered
 ; -samBQ number: only for samtools; minimum base quality for a base to be considered (samtools --min-BQ option)
-; -distrreg 0/1: distribute analysis over regions (per chromosome)
+; -distrreg: distribute regions for parallel processing.
+Possible options are 0 (no distribution), chr (or 1) (distribution per
+chromosome), a number (distribution ino regions of this size) ,file name
+(the regions in the file will be used for subjobs)
 ; -datatype datatype: Some variant callers (strelka) need to know the type
 of data (genome, exome or amplicons) for analysis. You can specify it
 using this option. If not given, it is deduced from acompanying region
