--- a/lib/cg_var.wiki
+++ b/lib/cg_var.wiki
@@ -35,9 +35,10 @@ freebayes
 ; -regionfile regionfile: only call variants in the region(s) given in regionfile
 ; -regmincoverage mincoverage: If no regionfile is given, variants will be called only in regions with
 a coverage of at least **mincoverage** (default 3)
-; -distrreg: distribute regions for parallel processing (default chr).
+; -distrreg: distribute regions for parallel processing.
 Possible options are 0 (no distribution), chr (or 1) (distribution per
-chromosome), file name (the regions in the file will be used for subjobs)
+chromosome), a number (distribution ino regions of this size) ,file name
+(the regions in the file will be used for subjobs)
 ; -datatype datatype: Some variant callers (strelka) need to know the type
 of data (genome, exome or amplicons) for analysis. You can specify it
 using this option. If not given, it is deduced from acompanying region
