--- a/docs/howto_process_project.wiki
+++ b/docs/howto_process_project.wiki
@@ -124,10 +124,10 @@ actually used for the various tools can be found in the analysisinfo files):
 Analysis was performed using the pipeline integrated in genomecomb (1) The
 pipeline used fastq-mcf (2) for adapter clipping. Reads were then aligned
 using bwa mem (3) and the resulting sam file converted to bam using
-samtools (4). Bam files were sorted and duplicates were removed using
-biobambam bammarkduplicates2 (5). Realignment in the neighborhood of
-indels was performed with GATK (6). Variants were called at all positions
-with a totalcoverage >= 5 using both GATK (6) and samtools (4). At this
+samtools (4). Bam files were sorted and duplicates were removed (marked) using
+samtools markdup (4). Realignment in the neighborhood of
+indels was performed with GATK (5). Variants were called at all positions
+with a totalcoverage >= 5 using both GATK (5) and samtools (4). At this
 initial stage positions with a coverage < 5 or a quality < 30 were
 considered unsequenced. The resulting variant sets of different
 individuals were combined and annotated using genomecomb (1).
@@ -136,8 +136,7 @@ individuals were combined and annotated using genomecomb (1).
 (2) fastq-mcf version <version>, Erik Aronesty (2011). ea-utils : "Command-line tools for processing biological sequencing data"; Expression Analysis, Durham, NC http://code.google.com/p/ea-utils
 (3) bwa version <version>, Li H. and Durbin R. (2009) Fast and accurate short read alignment with Burrows-Wheeler Transform. Bioinformatics, 25:1754-60. [PMID: 19451168] 
 (4) samtools version <version>, Li H.*, Handsaker B.*, Wysoker A., Fennell T., Ruan J., Homer N., Marth G., Abecasis G., Durbin R. and 1000 Genome Project Data Processing Subgroup (2009) The Sequence alignment/map (SAM) format and SAMtools. Bioinformatics, 25, 2078-9. [PMID: 19505943] 
-(5) biobambam <version>, Tischler G., Leonard S. (2013) Biobambam: Tools for read pair collation based algorithms on BAM files. Source Code for Biology and Medicine 9(1)
-(6) GATK version <version>, DePristo M, Banks E, Poplin R, Garimella K, Maguire J, Hartl C, Philippakis A, del Angel G, Rivas MA, Hanna M, McKenna A, Fennell T, Kernytsky A, Sivachenko A, Cibulskis K, Gabriel S, Altshuler D, Daly M (2011) A framework for variation discovery and genotyping using next-generation DNA sequencing data.  NATURE GENETICS 43:491-498 [PMID: 21478889]
+(5) GATK version <version>, DePristo M, Banks E, Poplin R, Garimella K, Maguire J, Hartl C, Philippakis A, del Angel G, Rivas MA, Hanna M, McKenna A, Fennell T, Kernytsky A, Sivachenko A, Cibulskis K, Gabriel S, Altshuler D, Daly M (2011) A framework for variation discovery and genotyping using next-generation DNA sequencing data.  NATURE GENETICS 43:491-498 [PMID: 21478889]
 }}}
 
 === Variations ===
