--- a/lib/cg_process_project.wiki
+++ b/lib/cg_process_project.wiki
@@ -76,11 +76,11 @@ not processed and not added to the final compar.
 ; -realign value: If **value** is 0, realignment will not be performed, 
 use 1 for (default) realignment with gatk, or srma for alignment with srma
 if 1, bam files are realigned using gatk, use **value** srma to align using srma.
-; -removeduplicates 0/1/picard: By default duplicates will be removed (1) using bammarkduplicates2
-(from biobambam2) except for amplicon sequencing. With this option you can
-specifically request or turn of duplicate removal (overruling the
-default). If you want to use large amounts of memory, you can still use picard
-for removing duplicates (third option)
+; -removeduplicates 0/1/picard/biobambam: By default duplicates will be
+removed (marked actually) using samtools except for amplicon sequencing.
+With this option you can specifically request or turn of duplicate removal
+(overruling the default). If you want to use large amounts of memory, you
+can still use picard for removing duplicates (third option)
 ; -amplicons ampliconfile: This option turns on amplicon sequencing analysis (as described 
 in [[cg_process_sample]]) using the amplicons defained in **ampliconfile** for all samples
 that do not have a sample specific amplicon file yet.
