cg fastq_split fix: help Category

--- a/lib/cg_fastq_split.wiki
+++ b/lib/cg_fastq_split.wiki
@@ -36,4 +36,4 @@ and thus not submit the follow up compression jobs
 ; **-threads number**: number of threads to use to compress the output files (bgzip -@)
 
 == Category ==
-Compression
+Conversion
