--- a/lib/cg_process_project.wiki
+++ b/lib/cg_process_project.wiki
@@ -73,6 +73,7 @@ not processed and not added to the final compar.
 ; -adapterfile file: Use **file** for possible adapter sequences
 ; -removeskew num: -k parameter for sequence clipping using fastq-mcf: sKew percentage-less-than causing cycle removal
 ; -aligner aligner (-a): use the given aligner for mapping to the reference genome (default bwa)
+; -aliformat format: format of the (final) alignment (map) files, this is by default bam, but can be set to cram
 ; -realign value: If **value** is 0, realignment will not be performed, 
 use 1 for (default) realignment with gatk, or srma for alignment with srma
 if 1, bam files are realigned using gatk, use **value** srma to align using srma.
